crates/ruff_python_parser/tests/snapshots/invalid_syntax@expressions__subscript__unclosed_slice_1.py.snap
---
source: crates/ruff_python_parser/tests/fixtures.rs
input_file: crates/ruff_python_parser/resources/invalid/expressions/subscript/unclosed_slice_1.py
---
## AST

```
Module(
    ModModule {
        range: 0..25,
        body: [
            Expr(
                StmtExpr {
                    range: 0..9,
                    value: Subscript(
                        ExprSubscript {
                            range: 0..9,
                            value: Name(
                                ExprName {
                                    range: 0..1,
                                    id: Name("x"),
                                    ctx: Load,
                                },
                            ),
                            slice: Slice(
                                ExprSlice {
                                    range: 2..9,
                                    lower: None,
                                    upper: None,
                                    step: Some(
                                        Name(
                                            ExprName {
                                                range: 6..9,
                                                id: Name("def"),
                                                ctx: Load,
                                            },
                                        ),
                                    ),
                                },
                            ),
                            ctx: Load,
                        },
                    ),
                },
            ),
            AnnAssign(
                StmtAnnAssign {
                    range: 10..25,
                    target: Call(
                        ExprCall {
                            range: 10..15,
                            func: Name(
                                ExprName {
                                    range: 10..13,
                                    id: Name("foo"),
                                    ctx: Load,
                                },
                            ),
                            arguments: Arguments {
                                range: 13..15,
                                args: [],
                                keywords: [],
                            },
                        },
                    ),
                    annotation: Name(
                        ExprName {
                            range: 21..25,
                            id: Name("pass"),
                            ctx: Load,
                        },
                    ),
                    value: None,
                    simple: false,
                },
            ),
        ],
    },
)
```
## Errors

error: Invalid syntax
  |
1 | x[::
2 | 
3 | def foo():
  | ^^^ Expected an identifier, but found a keyword 'def' that cannot be used here
4 |     pass
  |


error: Invalid syntax
  |
1 | x[::
2 | 
3 | def foo():
  |     ^^^ Expected ']', found name
4 |     pass
  |


error: Invalid syntax
  |
3 | def foo():
4 |     pass
  |     ^^^^ Expected an identifier, but found a keyword 'pass' that cannot be used here
  |


error: Invalid syntax
  |
3 | def foo():
4 |     pass
  |         ^ unexpected EOF while parsing
  |
